# Software_Design/BHW/BHW_3/OnlineStore/api-gateway/internal/delivery/handler_order_list.go
@@ -5,6 +5,15 @@ import (
 	"net/http"
 )
 
+// handleOrderList godoc
+// @Summary      List all orders
+// @Description  Returns a list of all orders
+// @Tags         orders
+// @Accept       json
+// @Produce      json
+// @Success      200 {array} domain.OrderResponse
+// @Failure      502 {string} string "Get orders failed"
+// @Router       /orders [get]
 func (h *Handler) handleOrderList(w http.ResponseWriter, req *http.Request) {
 	resp, err := h.orderService.List(req.Context())
 	if err != nil {
